# stats-todos

./: .env  Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yaml
crates/resources/: Cargo.toml
crates/resources/src/grpc/: config.rs  mod.rs  server.rs  service.rs
src/grpc/: main.rs
