[package]
name = "stats-todos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stats-todos"
path = "src/grpc/main.rs"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = 3

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["full"] }

[dependencies]
anyhow = "1.0.100"
resources = { path = "./crates/resources", version = "0.1.0" }
tokio = { version = "1.49.0", features = ["full"] }
